feat: add menu layout

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -18,15 +18,15 @@
             </ul>
             <button class="nav__btn-menu" type="button">Menu<span class="nav__btn-menu-icon"></span></button>
         </div>
-        <div class="headerbox">
-            <div class="headerbox-desc">
-                <h1 class="headerbox-desc__title white"><span class="headerbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
-                <p class="headerbox-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-                <a class="headerbox-desc__btn btn-primary" href="">Menu</a>
-            </div>
-        </div>
     </div>
     <div class="main wrapper">
+        <div class="mainbox">
+            <div class="mainbox-desc">
+                <h1 class="mainbox-desc__title white"><span class="mainbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
+                <p class="mainbox-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
+                <a class="mainbox-desc__btn btn-primary" href="">Menu</a>
+            </div>
+        </div>
         <div class="favorite-coffee">
             <h2 class="favorite-coffee__title">Choose your <span class="favorite-coffee__subtitle">favorite</span> coffee</h2>
             <div class="slider">
