--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -11,12 +11,12 @@
         <div class="nav">
             <a class="nav__logo" href=""></a>
             <ul class="nav-list">
-                <li><a class="nav-list__item" href="">Favorite coffee</a></li>
-                <li><a class="nav-list__item" href="">About</a></li>
-                <li><a class="nav-list__item" href="">Mobile app</a></li>
-                <li><a class="nav-list__item" href="">Contact us</a></li>
+                <li><a class="nav-list__item" href="index.html#Favorite">Favorite coffee</a></li>
+                <li><a class="nav-list__item" href="index.html#About">About</a></li>
+                <li><a class="nav-list__item" href="index.html#Mobile">Mobile app</a></li>
+                <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
-            <button class="nav__btn-menu" type="button">Menu<span class="nav__btn-menu-icon"></span></button>
+            <p class="nav__btn-menu" type="button">Menu<span class="nav__btn-menu-icon"></span></p><!--добавить user-select-none!!!-->
         </div>
     </div>
     <div class="menu wrapper">
@@ -155,7 +155,7 @@
             </div>
         </div>
     </div>
-    <div class="footer wrapper">
+    <div class="footer wrapper" id="Footer">
         <div class="footerbox">
             <div class="footerbox-desc">
                 <h2 class="footerbox-desc__title white">Sip, Savor, Smile.<span class="mobile-app__subtitle">It’s coffee time!</span></h2>
