feat: add mainbox style

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -31,7 +31,7 @@
             <div class="mainbox-desc">
                 <h1 class="mainbox-desc__title white"><span class="mainbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
                 <p class="mainbox-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-                <a class="mainbox-desc__btn btn-primary" href="">Menu</a>
+                <a class="mainbox-desc__btn btn-primary" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
             </div>
         </div>
         <div class="favorite-coffee" id="Favorite">
