--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee House</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,400..600&display=swap" rel="stylesheet">
-<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />-->
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">-->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -29,15 +29,15 @@
     <div class="main wrapper">
         <div class="mainbox">
             <div class="mainbox-desc">
-                <h1 class="mainbox-desc__title white"><span class="mainbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
+                <h1 class="mainbox-desc__title"><span class="mainbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
                 <p class="mainbox-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-                <a class="mainbox-desc__btn btn-primary" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
+                <a class="mainbox-desc__btn" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
             </div>
         </div>
         <div class="favorite-coffee" id="Favorite">
             <h2 class="favorite-coffee__title">Choose your <span class="favorite-coffee__subtitle">favorite</span> coffee</h2>
             <div class="slider">
-                <div class="slider-item">
+                <div class="slider-item slider-item--active">
                     <img class="slider-item__pic" src="img/main/coffee-slider-1.png" alt="S’mores Frappuccino">
                     <p class="slider-item__type">S’mores Frappuccino</p>
                     <p class="slider-item__desc">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
@@ -56,13 +56,17 @@
                     <p class="slider-item__price">$4.50</p>
                 </div>
             </div>
-            <button class="slider__btn-left" type="button"></button>
-            <button class="slider__btn-right" type="button"></button>
-            <ul class="controls">
-                <li class="controls__item"></li>
-                <li class="controls__item"></li>
-                <li class="controls__item"></li>
+            <ul class="slider-controls">
+                <li class="slider-controls__item slider-controls__item--active"></li>
+                <li class="slider-controls__item"></li>
+                <li class="slider-controls__item"></li>
             </ul>
+            <button class="slider__btn-left" type="button">
+                <svg width="60" height="60"><rect width="59" height="59" x=".5" y=".5" rx="29.5"/><path stroke-linecap="round" d="M36.5 30H24m0 0 6-6m-6 6 6 6"/></svg>
+            </button>
+            <button class="slider__btn-right" type="button">
+                <svg width="60" height="60"><rect width="59" height="59" x=".5" y=".5" rx="29.5"/><path stroke-linecap="round" d="M24 30h12.5m0 0-6-6m6 6-6 6"/></svg>
+            </button>
         </div>
         <div class="about" id="About">
             <h2 class="about__title">Resource is <span class="about__subtitle">the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
@@ -89,7 +93,7 @@
     <div class="footer wrapper" id="Footer">
         <div class="footerbox">
             <div class="footerbox-desc">
-                <h2 class="footerbox-desc__title white">Sip, Savor, Smile.<span class="mobile-app__subtitle">It’s coffee time!</span></h2>
+                <h2 class="footerbox-desc__title">Sip, Savor, Smile.<span class="mobile-app__subtitle">It’s coffee time!</span></h2>
                 <ul class="footerbox-desc-social">
                     <li class="footerbox-desc-social__item"><a class="fab fa-twitter" href="" target="_blank"></a></li>
                     <li class="footerbox-desc-social__item"><a class="fab fa-instagram" href="" target="_blank"></a></li>
