feat: add styling to block about

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -72,10 +72,18 @@
             <h2 class="about__title">Resource is <span class="about__subtitle">the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
             <div class="grid">
                 <!--7частей по горизонтали-->
-                <div class="grid-item grid-item-1"></div>
-                <div class="grid-item grid-item-2"></div>
-                <div class="grid-item grid-item-3"></div>
-                <div class="grid-item grid-item-4"></div>
+                <div class="grid-item grid-item-1">
+                    <img class="grid-item__pic" src="img/main/about-1.jpg" alt="Girl with a coffee">
+                </div>
+                <div class="grid-item grid-item-2">
+                    <img class="grid-item__pic" src="img/main/about-2.jpg" alt="Guy with a laptop">
+                </div>
+                <div class="grid-item grid-item-3">
+                    <img class="grid-item__pic" src="img/main/about-3.jpg" alt="Coffee">
+                </div>
+                <div class="grid-item grid-item-4">
+                    <img class="grid-item__pic" src="img/main/about-4.jpg" alt="Happy couple">
+                </div>
             </div>
         </div>
         <div class="mobile-app" id="Mobile">
