refactor: changes under crosscheck criteria

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="header wrapper">
+    <header class="header wrapper">
         <div class="nav">
             <a class="nav__logo" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/"></a>
             <ul class="nav-list">
@@ -34,13 +34,13 @@
             </ul>
             <a class="nav__btn-menu" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu <span class="nav__btn-menu-icon"></span></a>
         </div>
-    </div>
+    </header>
     <div class="main wrapper">
-        <div class="mainbox">
-            <div class="mainbox-desc">
-                <h1 class="mainbox-desc__title"><span class="mainbox-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
-                <p class="mainbox-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-                <a class="mainbox-desc__btn" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
+        <div class="enjoy">
+            <div class="enjoy-desc">
+                <h1 class="enjoy-desc__title"><span class="enjoy-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
+                <p class="enjoy-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
+                <a class="enjoy-desc__btn" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
             </div>
         </div>
         <div class="favorite-coffee" id="Favorite">
@@ -106,7 +106,7 @@
             <img class="mobile-app__img" src="img/main/mobile-screens.png" alt="Mobiles">
         </div>
     </div>
-    <div class="footer wrapper" id="Footer">
+    <footer class="footer wrapper">
         <div class="footerbox">
             <div class="footerbox-desc">
                 <h2 class="footerbox-desc__title">Sip, Savor, Smile. <span class="footerbox-desc__subtitle">It’s coffee time!</span></h2>
@@ -131,6 +131,6 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
