feat: add sticky footer

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -126,6 +126,7 @@
             <img class="mobile-app__img" src="img/main/mobile-screens.png" alt="Mobiles" width="630" height="630">
         </div>
     </div>
+    <div class="push-footer"></div>
     <footer class="footer wrapper">
         <div class="footerbox">
             <div class="footerbox-desc">
