--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -256,6 +256,7 @@
             </div>
         </div>
     </div>
+    <div class="push-footer"></div>
     <footer class="footer wrapper">
         <div class="footerbox">
             <div class="footerbox-desc">
