fix: change smooth scrolling in header links

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -25,12 +25,12 @@
 <body>
     <header class="header wrapper">
         <div class="nav">
-            <a class="nav__logo" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/"></a>
+            <a class="nav__logo" href="."></a>
             <ul class="nav-list">
                 <li><a class="nav-list__item" href="index.html#Favorite">Favorite coffee</a></li>
                 <li><a class="nav-list__item" href="index.html#About">About</a></li>
                 <li><a class="nav-list__item" href="index.html#Mobile">Mobile app</a></li>
-                <li><span class="nav-list__item" onclick="window.scrollTo({top: 3500, left: 0, behavior: 'smooth'})">Contact us</span></li>
+                <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
             <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
         </div>
@@ -257,7 +257,7 @@
         </div>
     </div>
     <div class="push-footer"></div>
-    <footer class="footer wrapper">
+    <footer class="footer wrapper" id="Footer">
         <div class="footerbox">
             <div class="footerbox-desc">
                 <h2 class="footerbox-desc__title">Sip, Savor, Smile. <span class="footerbox-desc__subtitle">It’s coffee time!</span></h2>
