--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -25,14 +25,14 @@
 <body>
     <header class="header wrapper">
         <div class="nav">
-            <a class="nav__logo" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/"></a>
+            <a class="nav__logo" href="."></a>
             <ul class="nav-list">
-                <li><span class="nav-list__item" onclick="window.scrollTo({top: 800, left: 0, behavior: 'smooth'})">Favorite coffee</span></li>
-                <li><span class="nav-list__item" onclick="window.scrollTo({top: 1720, left: 0, behavior: 'smooth'})">About</span></li>
-                <li><span class="nav-list__item" onclick="window.scrollTo({top: 3080, left: 0, behavior: 'smooth'})">Mobile app</span></li>
-                <li><span class="nav-list__item" onclick="window.scrollTo({top: 3500, left: 0, behavior: 'smooth'})">Contact us</span></li>
+                <li><a class="nav-list__item" href="#Favorite">Favorite coffee</a></li>
+                <li><a class="nav-list__item" href="#About">About</a></li>
+                <li><a class="nav-list__item" href="#Mobile">Mobile app</a></li>
+                <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
-            <a class="nav__btn-menu" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu <span class="nav__btn-menu-icon"></span></a>
+            <a class="nav__btn-menu" href="menu.html">Menu <span class="nav__btn-menu-icon"></span></a>
         </div>
     </header>
     <div class="main wrapper">
@@ -40,7 +40,7 @@
             <div class="enjoy-desc">
                 <h1 class="enjoy-desc__title"><span class="enjoy-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
                 <p class="enjoy-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-                <a class="enjoy-desc__btn" href="https://rolling-scopes-school.github.io/vadimkol-JSFE2023Q4/coffee-house/menu">Menu</a>
+                <a class="enjoy-desc__btn" href="menu.html">Menu</a>
             </div>
         </div>
         <div class="favorite-coffee" id="Favorite">
@@ -127,7 +127,7 @@
         </div>
     </div>
     <div class="push-footer"></div>
-    <footer class="footer wrapper">
+    <footer class="footer wrapper" id="Footer">
         <div class="footerbox">
             <div class="footerbox-desc">
                 <h2 class="footerbox-desc__title">Sip, Savor, Smile. <span class="footerbox-desc__subtitle">It’s coffee time!</span></h2>
