feat: add responsive design to header and enjoy blocks in index page plus many minor changes

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,400..600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/menu.css">
+    <link rel="stylesheet" href="style/media.css">
 </head>
 <body>
     <header class="header wrapper">
@@ -33,6 +34,16 @@
                 <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
             <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
+            <button class="nav__btn-mobile" type="button"></button>
+        </div>
+        <div class="nav nav-mobile">
+            <ul class="nav-list">
+                <li><a class="nav-list__item" href="#Favorite">Favorite coffee</a></li>
+                <li><a class="nav-list__item" href="#About">About</a></li>
+                <li><a class="nav-list__item" href="#Mobile">Mobile app</a></li>
+                <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
+            </ul>
+            <a class="nav__btn-menu" href="menu.html">Menu <span class="nav__btn-menu-icon"></span></a>
         </div>
     </header>
     <div class="menu wrapper">
