feat: add tablet design for home page

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -60,44 +60,46 @@
             </div>
         </div>
         <div class="favorite-coffee" id="Favorite">
-            <h2 class="favorite-coffee__title">Choose your <span class="favorite-coffee__subtitle">favorite</span>&nbsp;coffee</h2>
-            <div class="slider">
-                <div class="slider-item slider-item--active">
-                    <img class="slider-item__pic" src="img/main/coffee-slider-1.png" alt="S’mores Frappuccino" width="530" height="530">
-                    <p class="slider-item__type">S’mores Frappuccino</p>
-                    <p class="slider-item__desc">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
-                    <p class="slider-item__price">$5.50</p>
+            <h2 class="favorite-coffee__title">Choose your <span class="favorite-coffee__subtitle">favorite</span> coffee</h2>
+            <div class="slider-box">
+                <div class="slider">
+                    <div class="slider-item slider-item--active">
+                        <img class="slider-item__pic" src="img/main/coffee-slider-1.png" alt="S’mores Frappuccino" width="530" height="530">
+                        <p class="slider-item__type">S’mores Frappuccino</p>
+                        <p class="slider-item__desc">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
+                        <p class="slider-item__price">$5.50</p>
+                    </div>
+                    <div class="slider-item">
+                        <img class="slider-item__pic" src="img/main/coffee-slider-2.png" alt="Caramel Macchiato" width="530" height="530">
+                        <p class="slider-item__type">Caramel Macchiato</p>
+                        <p class="slider-item__desc">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
+                        <p class="slider-item__price">$5.00</p>
+                    </div>
+                    <div class="slider-item">
+                        <img class="slider-item__pic" src="img/main/coffee-slider-3.png" alt="Ice coffee" width="530" height="530">
+                        <p class="slider-item__type">Ice coffee</p>
+                        <p class="slider-item__desc">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                        <p class="slider-item__price">$4.50</p>
+                    </div>
                 </div>
-                <div class="slider-item">
-                    <img class="slider-item__pic" src="img/main/coffee-slider-2.png" alt="Caramel Macchiato" width="530" height="530">
-                    <p class="slider-item__type">Caramel Macchiato</p>
-                    <p class="slider-item__desc">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
-                    <p class="slider-item__price">$5.00</p>
-                </div>
-                <div class="slider-item">
-                    <img class="slider-item__pic" src="img/main/coffee-slider-3.png" alt="Ice coffee" width="530" height="530">
-                    <p class="slider-item__type">Ice coffee</p>
-                    <p class="slider-item__desc">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
-                    <p class="slider-item__price">$4.50</p>
-                </div>
+                <ul class="slider-controls">
+                    <li class="slider-controls__item slider-controls__item--active"></li>
+                    <li class="slider-controls__item"></li>
+                    <li class="slider-controls__item"></li>
+                </ul>
+                <button class="slider__btn-left" type="button">
+                    <svg width="60" height="60">
+                        <rect width="59" height="59" x=".5" y=".5" rx="29.5"/>
+                        <path stroke-linecap="round" d="M36.5 30H24m0 0 6-6m-6 6 6 6"/>
+                    </svg>
+                </button>
+                <button class="slider__btn-right" type="button">
+                    <svg width="60" height="60">
+                        <rect width="59" height="59" x=".5" y=".5" rx="29.5"/>
+                        <path stroke-linecap="round" d="M24 30h12.5m0 0-6-6m6 6-6 6"/>
+                    </svg>
+                </button>
             </div>
-            <ul class="slider-controls">
-                <li class="slider-controls__item slider-controls__item--active"></li>
-                <li class="slider-controls__item"></li>
-                <li class="slider-controls__item"></li>
-            </ul>
-            <button class="slider__btn-left" type="button">
-                <svg width="60" height="60">
-                    <rect width="59" height="59" x=".5" y=".5" rx="29.5"/>
-                    <path stroke-linecap="round" d="M36.5 30H24m0 0 6-6m-6 6 6 6"/>
-                </svg>
-            </button>
-            <button class="slider__btn-right" type="button">
-                <svg width="60" height="60">
-                    <rect width="59" height="59" x=".5" y=".5" rx="29.5"/>
-                    <path stroke-linecap="round" d="M24 30h12.5m0 0-6-6m6 6-6 6"/>
-                </svg>
-            </button>
         </div>
         <div class="about" id="About">
             <h2 class="about__title">Resource is <span class="about__subtitle">the perfect and cozy place</span> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
