--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -34,16 +34,21 @@
                 <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
             <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
-            <button class="nav__btn-mobile" type="button"></button>
+            <button class="nav-btn-mobile-equal" type="button" onclick="ShowMobileMenu()">
+                <svg width="18" height="10"><path d="M1 1h16M1 9h16"/></svg>
+            </button>
+            <button class="nav-btn-mobile-cross" type="button" onclick="HideMobileMenu()">
+                <svg width="14" height="14"><path d="m1.344 1.343 11.314 11.314M1.344 12.657 12.658 1.343"/></svg>
+            </button>
         </div>
-        <div class="nav nav-mobile">
+        <div class="nav nav--mobile">
             <ul class="nav-list">
-                <li><a class="nav-list__item" href="#Favorite">Favorite coffee</a></li>
-                <li><a class="nav-list__item" href="#About">About</a></li>
-                <li><a class="nav-list__item" href="#Mobile">Mobile app</a></li>
+                <li><a class="nav-list__item" href="index.html#Favorite">Favorite coffee</a></li>
+                <li><a class="nav-list__item" href="index.html#About">About</a></li>
+                <li><a class="nav-list__item" href="index.html#Mobile">Mobile app</a></li>
                 <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
-            <a class="nav__btn-menu" href="menu.html">Menu <span class="nav__btn-menu-icon"></span></a>
+            <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
         </div>
     </header>
     <div class="menu wrapper">
@@ -266,6 +271,12 @@
                 </div>
             </div>
         </div>
+        <button class="grid-add" type="button">
+            <svg width="24" height="24">
+                <path d="M21.888 13.5C21.164 18.311 17.013 22 12 22 6.477 22 2 17.523 2 12S6.477 2 12 2c4.1 0 7.625 2.468 9.168 6"/>
+                <path d="M17 8h4.4a.6.6 0 0 0 .6-.6V3"/>
+            </svg>
+        </button>
     </div>
     <div class="push-footer"></div>
     <footer class="footer wrapper" id="Footer">
@@ -311,5 +322,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/index.js" defer></script>
 </body>
 </html>
