--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -48,11 +48,11 @@
                 <li><a class="nav-list__item" href="index.html#Mobile">Mobile app</a></li>
                 <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
-            <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
+            <p class="nav__btn-menu">Menu <span class="nav__btn-menu-icon"></span></p>
         </div>
     </header>
     <div class="menu wrapper">
-        <h1 class="menu-desc__title">Behind each of our cups hides an <span class="menu-desc__subtitle">amazing surprise</span></h1>
+        <h1 class="menu-desc__title">Behind each of our cups hides an <span class="menu-desc__subtitle">amazing&nbsp;surprise</span></h1>
         <ul class="menu-tab">
             <li>
                 <button class="menu-tab__btn menu-tab__btn--active" type="button">
