fix: add changes under cross check criteria

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <div class="menu wrapper">
-        <h1 class="menu-desc__title">Behind each of our cups hides an <span class="menu-desc__subtitle">amazing&nbsp;surprise</span></h1>
+        <h1 class="menu-desc__title">Behind each of our cups hides an <span class="menu-desc__subtitle">amazing surprise</span></h1>
         <ul class="menu-tab">
             <li>
                 <button class="menu-tab__btn menu-tab__btn--active" type="button">
