--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -34,21 +34,21 @@
                 <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
             </ul>
             <p class="nav__btn-menu">Menu<span class="nav__btn-menu-icon"></span></p>
-            <button class="nav-btn-mobile-equal" type="button" onclick="ShowMobileMenu()">
-                <svg width="18" height="10"><path d="M1 1h16M1 9h16"/></svg>
-            </button>
-            <button class="nav-btn-mobile-cross" type="button" onclick="HideMobileMenu()">
-                <svg width="14" height="14"><path d="m1.344 1.343 11.314 11.314M1.344 12.657 12.658 1.343"/></svg>
+            <button class="nav-btn-mobile-equal" type="button" onclick="ToggleMobileMenu()">
+                <span class="nav-btn-mobile-equal__first"></span>
+                <span class="nav-btn-mobile-equal__second"></span>
             </button>
         </div>
-        <div class="nav nav--mobile">
-            <ul class="nav-list">
-                <li><a class="nav-list__item" href="index.html#Favorite">Favorite coffee</a></li>
-                <li><a class="nav-list__item" href="index.html#About">About</a></li>
-                <li><a class="nav-list__item" href="index.html#Mobile">Mobile app</a></li>
-                <li><a class="nav-list__item" href="#Footer">Contact us</a></li>
-            </ul>
-            <p class="nav__btn-menu">Menu <span class="nav__btn-menu-icon"></span></p>
+        <div class="wrap-mobile">
+            <div class="nav nav--mobile">
+                <ul class="nav-list">
+                    <li><a class="nav-list__item" href="index.html#Favorite" onclick="ToggleMobileMenu()">Favorite coffee</a></li>
+                    <li><a class="nav-list__item" href="index.html#About" onclick="ToggleMobileMenu()">About</a></li>
+                    <li><a class="nav-list__item" href="index.html#Mobile" onclick="ToggleMobileMenu()">Mobile app</a></li>
+                    <li><a class="nav-list__item" href="#Footer" onclick="ToggleMobileMenu()">Contact us</a></li>
+                </ul>
+                <p class="nav__btn-menu" onclick="ToggleMobileMenu()">Menu<span class="nav__btn-menu-icon"></span></p>
+            </div>
         </div>
     </header>
     <div class="menu wrapper">
