feat: add video as background for enjoy block

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -53,6 +53,7 @@
     </header>
     <div class="main wrapper">
         <div class="enjoy">
+            <video autoplay muted loop playsinline class="enjoy-video" poster="img/main/hero.jpg" type="video/mp4"></video>
             <div class="enjoy-desc">
                 <h1 class="enjoy-desc__title"><span class="enjoy-desc__subtitle">Enjoy</span> premium coffee at our charming cafe</h1>
                 <p class="enjoy-desc__text">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
