feat: add category switching and btn load more

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -180,7 +180,8 @@
             </div>
         </div>
     </footer>
-    <script src="js/index.js" defer></script>
+    <script src="js/header.js" defer></script>
+    <script src="js/video.js" defer></script>
     <script src="js/slider.js" defer></script>
 </body>
 </html>
