--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -55,7 +55,7 @@
         <h1 class="menu-desc__title">Behind each of our cups hides an <span class="menu-desc__subtitle">amazing surprise</span></h1>
         <ul class="menu-tab">
             <li>
-                <button class="menu-tab__btn menu-tab__btn--active" type="button">
+                <button class="menu-tab__btn menu-tab__btn--active" type="button" id="coffee">
                     <svg width="31" height="30">
                         <rect class="circle-img" width="30" height="30" x=".5" rx="15"/>
                         <path fill="url(#a)" d="M7.5 23.12h16v-16h-16v16Z"/>
@@ -70,7 +70,7 @@
                 </button>
             </li>
             <li>
-                <button class="menu-tab__btn" type="button">
+                <button class="menu-tab__btn" type="button" id="tea">
                     <svg width="31" height="30">
                         <rect class="circle-img" width="30" height="30" x=".5" rx="15"/>
                         <path fill="url(#c)" d="M7.5 23.12h16v-16h-16v16Z"/>
@@ -85,7 +85,7 @@
                 </button>
             </li>
             <li>
-                <button class="menu-tab__btn" type="button">
+                <button class="menu-tab__btn" type="button" id="dessert">
                     <svg width="31" height="30">
                         <rect class="circle-img" width="30" height="30" x=".5" rx="15"/>
                         <path fill="url(#e)" d="M7.5 23.12h16v-16h-16v16Z"/>
@@ -100,175 +100,14 @@
                 </button>
             </li>
         </ul>
-        <div class="grid">
-            <div class="grid-coffee grid-coffee--active">
-                <div class="grid-coffee-item grid-coffee-item-1">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-1.jpg" alt="Irish coffee" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Irish coffee</p>
-                    <p class="grid-coffee-item__desc">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
-                    <p class="grid-coffee-item__price">$7.00</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-2">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-2.jpg" alt="Kahlua coffee" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Kahlua coffee</p>
-                    <p class="grid-coffee-item__desc">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
-                    <p class="grid-coffee-item__price">$7.00</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-3">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-3.jpg" alt="Honey raf" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Honey raf</p>
-                    <p class="grid-coffee-item__desc">Espresso with frothed milk, cream and aromatic honey</p>
-                    <p class="grid-coffee-item__price">$5.50</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-4">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-4.jpg" alt="Ice cappuccino" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Ice cappuccino</p>
-                    <p class="grid-coffee-item__desc">Cappuccino with soft thick foam in summer version with ice</p>
-                    <p class="grid-coffee-item__price">$5.00</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-5">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-5.jpg" alt="Espresso" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Espresso</p>
-                    <p class="grid-coffee-item__desc">Classic black coffee</p>
-                    <p class="grid-coffee-item__price">$4.50</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-6">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-6.jpg" alt="Latte" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Latte</p>
-                    <p class="grid-coffee-item__desc">Espresso coffee with the addition of steamed milk and dense milk foam</p>
-                    <p class="grid-coffee-item__price">$5.50</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-7">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-7.jpg" alt="Latte macchiato" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Latte macchiato</p>
-                    <p class="grid-coffee-item__desc">Espresso with frothed milk and chocolate</p>
-                    <p class="grid-coffee-item__price">$5.50</p>
-                </div>
-                <div class="grid-coffee-item grid-coffee-item-8">
-                    <div class="grid-coffee-item-box">
-                        <img class="grid-coffee-item-box__pic" src="img/menu_coffee/coffee-8.jpg" alt="Coffee with cognac" width="680" height="680">
-                    </div>
-                    <p class="grid-coffee-item__type">Coffee with cognac</p>
-                    <p class="grid-coffee-item__desc">Fragrant black coffee with cognac and whipped cream</p>
-                    <p class="grid-coffee-item__price">$6.50</p>
-                </div>
-            </div>
-            <div class="grid-tea">
-                <div class="grid-tea-item grid-tea-item-1">
-                    <div class="grid-tea-item-box">
-                        <img class="grid-tea-item-box__pic" src="img/menu_tea/tea-1.jpg" alt="Moroccan" width="680" height="680">
-                    </div>
-                    <p class="grid-tea-item__type">Moroccan</p>
-                    <p class="grid-tea-item__desc">Fragrant black tea with the addition of tangerine, cinnamon, honey, lemon and mint</p>
-                    <p class="grid-tea-item__price">$4.50</p>
-                </div>
-                <div class="grid-tea-item grid-tea-item-2">
-                    <div class="grid-tea-item-box">
-                        <img class="grid-tea-item-box__pic" src="img/menu_tea/tea-2.jpg" alt="Ginger" width="680" height="680">
-                    </div>
-                    <p class="grid-tea-item__type">Ginger</p>
-                    <p class="grid-tea-item__desc">Original black tea with fresh ginger, lemon and honey</p>
-                    <p class="grid-tea-item__price">$5.00</p>
-                </div>
-                <div class="grid-tea-item grid-tea-item-3">
-                    <div class="grid-tea-item-box">
-                        <img class="grid-tea-item-box__pic" src="img/menu_tea/tea-3.jpg" alt="Cranberry" width="680" height="680">
-                    </div>
-                    <p class="grid-tea-item__type">Cranberry</p>
-                    <p class="grid-tea-item__desc">Invigorating black tea with cranberry and honey</p>
-                    <p class="grid-tea-item__price">$5.00</p>
-                </div>
-                <div class="grid-tea-item grid-tea-item-4">
-                    <div class="grid-tea-item-box">
-                        <img class="grid-tea-item-box__pic" src="img/menu_tea/tea-4.jpg" alt="Sea buckthorn" width="680" height="680">
-                    </div>
-                    <p class="grid-tea-item__type">Sea buckthorn</p>
-                    <p class="grid-tea-item__desc">Toning sweet black tea with sea buckthorn, fresh thyme and cinnamon</p>
-                    <p class="grid-tea-item__price">$5.50</p>
-                </div>
-            </div>
-            <div class="grid-dessert">
-                <div class="grid-dessert-item grid-dessert-item-1">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-1.jpg" alt="Marble cheesecake" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Marble cheesecake</p>
-                    <p class="grid-dessert-item__desc">Philadelphia cheese with lemon zest on a light sponge cake and red currant jam</p>
-                    <p class="grid-dessert-item__price">$3.50</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-2">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-2.jpg" alt="Red velvet" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Red velvet</p>
-                    <p class="grid-dessert-item__desc">Layer cake with cream cheese frosting</p>
-                    <p class="grid-dessert-item__price">$4.00</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-3">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-3.jpg" alt="Cheesecakes" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Cheesecakes</p>
-                    <p class="grid-dessert-item__desc">Soft cottage cheese pancakes with sour cream and fresh berries and sprinkled with powdered sugar</p>
-                    <p class="grid-dessert-item__price">$4.50</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-4">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-4.jpg" alt="Creme brulee" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Creme brulee</p>
-                    <p class="grid-dessert-item__desc">Delicate creamy dessert in a caramel basket with wild berries</p>
-                    <p class="grid-dessert-item__price">$4.00</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-5">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-5.jpg" alt="Pancakes" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Pancakes</p>
-                    <p class="grid-dessert-item__desc">Tender pancakes with strawberry jam and fresh strawberries</p>
-                    <p class="grid-dessert-item__price">$4.50</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-6">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-6.jpg" alt="Honey cake" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Honey cake</p>
-                    <p class="grid-dessert-item__desc">Classic honey cake with delicate custard</p>
-                    <p class="grid-dessert-item__price">$4.50</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-7">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-7.jpg" alt="Chocolate cake" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Chocolate cake</p>
-                    <p class="grid-dessert-item__desc">Cake with hot chocolate filling and nuts with dried apricots</p>
-                    <p class="grid-dessert-item__price">$5.50</p>
-                </div>
-                <div class="grid-dessert-item grid-dessert-item-8">
-                    <div class="grid-dessert-item-box">
-                        <img class="grid-dessert-item-box__pic" src="img/menu_dessert/dessert-8.jpg" alt="Black forest" width="680" height="680">
-                    </div>
-                    <p class="grid-dessert-item__type">Black forest</p>
-                    <p class="grid-dessert-item__desc">A combination of thin sponge cake with cherry jam and light chocolate mousse</p>
-                    <p class="grid-dessert-item__price">$6.50</p>
-                </div>
-            </div>
-        </div>
-        <button class="grid-add" type="button">
+        <div class="grid" id="grid"></div>
+        <button class="grid-add" type="button" id="loadCoffee" onclick="showCoffee()">
+            <svg width="24" height="24">
+                <path d="M21.888 13.5C21.164 18.311 17.013 22 12 22 6.477 22 2 17.523 2 12S6.477 2 12 2c4.1 0 7.625 2.468 9.168 6"/>
+                <path d="M17 8h4.4a.6.6 0 0 0 .6-.6V3"/>
+            </svg>
+        </button>
+        <button class="grid-add hide-btn" type="button" id="loadDessert" onclick="showDessert()">
             <svg width="24" height="24">
                 <path d="M21.888 13.5C21.164 18.311 17.013 22 12 22 6.477 22 2 17.523 2 12S6.477 2 12 2c4.1 0 7.625 2.468 9.168 6"/>
                 <path d="M17 8h4.4a.6.6 0 0 0 .6-.6V3"/>
@@ -316,6 +155,9 @@
             </div>
         </div>
     </footer>
-    <script src="js/index.js" defer></script>
+    <script src="js/header.js" defer></script>
+    <script type="module" src="js/menu.js" defer></script>
+    <script src="js/switch.js" defer></script>
+    <script src="js/load_more.js" defer></script>
 </body>
 </html>
