feat: add modals

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -155,9 +155,13 @@
             </div>
         </div>
     </footer>
+    <div class="modal" onclick="closeModal()">
+        <div class="modal-item"></div>
+    </div>
     <script src="js/header.js" defer></script>
     <script type="module" src="js/menu.js" defer></script>
     <script src="js/switch.js" defer></script>
     <script src="js/load_more.js" defer></script>
+    <script type="module" src="js/modal.js" defer></script>
 </body>
 </html>
