fix: burger menu under cross check

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -163,5 +163,6 @@
     <script src="js/switch.js" defer></script>
     <script src="js/load_more.js" defer></script>
     <script type="module" src="js/modal.js" defer></script>
+    <script src="js/resize.js" defer></script>
 </body>
 </html>
